# weather-mcp

./: Dockerfile  pyproject.toml  smithery.yaml
weather_mcp/: server.py
