[project]
name = "weather-mcp"
version = "0.1.0"
description = "MCP server for weather information"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=1.0.0",
    "requests>=2.31.0"
]

[project.scripts]
weather-mcp = "weather_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["weather_mcp"]
